Add configurable import paths to loader and tests
Introduces a Loader.config type to allow specifying include paths for module resolution, with a default_config provided. Updates all loader functions and main entry points to accept and use the config. Adds a new test suite for loader functionality, including custom and stdlib module loading, and updates the test dune file accordingly.

--- a/test/dune
+++ b/test/dune
@@ -1,4 +1,4 @@
 (tests
- (names test_parser test_typing test_refinement test_ghost)
+ (names test_parser test_typing test_loader)
  (libraries certijson alcotest))
 
