Add ProofPy build system and CLI
Introduce a new build_system directory with modules for project configuration parsing (config.ml), build orchestration (builder.ml), and a CLI entry point (main.ml). Add Dune build files for the build system. Update certijson.opam and dune-project to depend on the toml library. Enhance bin/main.ml to support include paths and quiet mode, and update loader.ml to auto-detect stdlib locations. Add example ProofPy.toml files and a hello world example project.

--- a/certijson.opam
+++ b/certijson.opam
@@ -19,6 +19,7 @@ depends: [
   "cmdliner" {>= "1.1"}
   "fmt" {>= "0.9"}
   "logs" {>= "0.7"}
+  "toml" {>= "7.0"}
   "alcotest" {>= "1.6" & with-test}
   "odoc" {with-doc}
 ]
